overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,6 @@ body {
     background-size: cover;
     background-position: center center;
 }
+.overflow-x-hidden {
+    overflow-x: hidden;
+}
